# data-engineering-portfolio

./: .gitignore  LICENSE  README.md
projects/01-datasus-leitos-pipeline/: Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
projects/01-datasus-leitos-pipeline/docs/: dashboard.html
projects/01-datasus-leitos-pipeline/models/: sources.yml
projects/01-datasus-leitos-pipeline/models/marts/: agg_leitos_por_municipio.sql  agg_leitos_por_uf.sql  dim_estabelecimentos.sql  dim_localidades.sql  fct_leitos.sql  schema.yml
projects/01-datasus-leitos-pipeline/models/staging/: schema.yml  stg_estabelecimentos.sql  stg_municipios.sql  stg_populacao.sql
projects/01-datasus-leitos-pipeline/src/: dashboard.py  ingest.py
projects/02-anac-voos-pipeline/: Makefile  README.md  pyproject.toml
projects/02-anac-voos-pipeline/docs/: dashboard.html
projects/02-anac-voos-pipeline/src/: dashboard.py  ingest.py  transform.py  validate.py
projects/03-github-json-pipeline/: Makefile  README.md  pyproject.toml
projects/04-aws-data-platform/: Makefile  README.md  pyproject.toml
projects/04-aws-data-platform/glue_jobs/: bronze_to_silver.py  silver_to_gold.py
projects/04-aws-data-platform/redshift/: masking_policy.sql
projects/04-aws-data-platform/src/: generate_data.py  ml_models.py  reconcile.py  setup_quicksight.py
projects/04-aws-data-platform/step_functions/: pipeline.asl.json
projects/04-aws-data-platform/terraform/: main.tf
projects/05-s3-tables-poc/: .gitignore  Makefile  README.md
projects/06-realtime-fraud-detection/: .gitignore  Makefile  (+2 more)
(+84 files in other folders)
