[project]
name = "anac-voos-pipeline"
version = "0.1.0"
description = "Pipeline de pontualidade da aviacao civil brasileira"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "great-expectations>=0.18",
    "plotly>=5.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
]
